Setup data pages and made some custom styles

--- a/DataTypePages/Movies.html
+++ b/DataTypePages/Movies.html
@@ -14,9 +14,9 @@
 
     <nav class="mainlinks">
       <ul>
-        <li><a title="Home page" href="#">Home</a></li>
+        <li><a title="Home page" href="../index.html">Home</a></li>
         <li>
-          <a title="Movie home page" href="DataTypePages/Movies.html">Movies</a>
+          <a title="Movie home page" href="#">Movies</a>
         </li>
         <!-- <li>Shows</li>  may or may not do shows instead or as well as the movie type-->
         <li>
