--- a/DataTypePages/Actors.html
+++ b/DataTypePages/Actors.html
@@ -13,19 +13,14 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="ActorsStyle.css" />
     <link rel="stylesheet" href="../mainstlye.css" />
+    <link rel="stylesheet" href="mainstlye.css" />
+
     <!-- END SHARED -->
   </head>
-  <body>
-    <!--Bootstrap script-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-      crossorigin="anonymous"
-    ></script>
-    <!--Bootstrap end-->
 
+  <body>
     <header><h1>Box Office Database</h1></header>
 
     <nav class="mainlinks">
@@ -44,39 +39,38 @@
     </nav>
 
     <main>
-      <section>
-        <article>
-          <h2>Actors</h2>
-          <p>List of Actors:</p>
-          <ul>
-            <li>Kermit the frog</li>
-            <li>Will Ferrell</li>
-            <li>Bob Odenkirk</li>
-          </ul>
-          <p></p>
-        </article>
+      <article>
+        <h2>Actors</h2>
+        <p style="font-size: 1.4em">List of Actors:</p>
+        <ul>
+          <li>Kermit the frog</li>
+          <li>Will Ferrell</li>
+          <li>Bob Odenkirk</li>
+        </ul>
+        <p></p>
+      </article>
 
-        <article>
-          <h2>Kermit the frog</h2>
-          <img src="../ActorImages/kermit.jpg" alt="Kermit the frog" />
-          <p>
-            Kermit is a muppet that many people admire, he is widely known from
-            <a href="https://www.imdb.com/title/tt0104940?ref_=nm_ov_bio_lk1">
-              The Muppet Christmas Carol
-            </a>
-            ,
-            <a href="https://www.imdb.com/title/tt0104940?ref_=nm_ov_bio_lk1">
-              Muppets Most Wanted
-            </a>
-            , and
-            <a href="https://www.imdb.com/title/tt0104940?ref_=nm_ov_bio_lk1">
-              Muppets Treasure Island
-            </a>
+      <article>
+        <h2>Kermit the frog</h2>
+        <img src="../ActorImages/kermit.jpg" alt="Kermit the frog" />
+        <p>
+          Kermit is a muppet that many people admire, he is widely known from
+          <a href="https://www.imdb.com/title/tt0104940?ref_=nm_ov_bio_lk1">
+            The Muppet Christmas Carol
+          </a>
+          ,
+          <a href="https://www.imdb.com/title/tt0104940?ref_=nm_ov_bio_lk1">
+            Muppets Most Wanted
+          </a>
+          , and
+          <a href="https://www.imdb.com/title/tt0104940?ref_=nm_ov_bio_lk1">
+            Muppets Treasure Island
+          </a>
 
-            (this will link to movies section later)
-          </p>
-        </article>
-      </section>
+          (this will link to movies section later)
+        </p>
+      </article>
+
       <article>
         <h2>About Kermit</h2>
         <p>
@@ -90,6 +84,8 @@
         <p>
           Users who like kermit:
           <br />
+          <a href="UserData.html"> mjmeyer2001 </a>
+          <br />
           <a href="UserData.html"> T-mas </a>
         </p>
         <p>
@@ -99,7 +95,8 @@
         </p>
       </article>
     </main>
-    <footer>
+
+    <footer style="margin-top: 5%">
       <div>
         <span style="font-size: 1.5em">Page by JMM</span>
         <p>
