Finished working on my data page and did the changes for the general style sheet

--- a/DataTypePages/Actors.html
+++ b/DataTypePages/Actors.html
@@ -32,7 +32,8 @@
       <ul>
         <li><a title="Home page" href="../index.html">Home</a></li>
         <li>
-          <a title="Movie home page" href="Movies.html">Movies</a>
+          <!-- <a title="Movie home page" href="Movies/Movies.html">Movies</a> -->
+          <a title="Movie home page" href="Movies\Movies.html">Movies</a>
         </li>
         <li>
           <a title="User's Data Page" href="UserData.html">User data</a>
@@ -79,10 +80,7 @@
       </section>
       <article>
         <h2>About Kermit</h2>
-        <p>
-          Kermit was born in 1955. He begain his acting career in Sam and
-          Friends.
-        </p>
+        <p>Kermit was born in 1955. He begain his acting career in Sam and Friends.</p>
       </article>
 
       <article>
