Added some stuff to the home page

--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
         <p>
           Welcome to the Box Office Database. Here you can find all the information you
           need on movies, actors, and user data. Using the navbar you can locate all of
-          the individual pages that have specified information.
+          the individual pages that have specified information. This site is currently
+          under development and as such there are some functionalites that have not yet
+          been made available. However, this will have information on all of the data
+          types and tie them together more than just navagating using the navbar at the
+          top of the page.
         </p>
       </article>
+      <img
+        src="DataBase graphic.jpg"
+        alt="blue graphic of a cylindrical database object with small task icons pointing to it"
+        id="homepicture"
+      />
     </div>
 
     <footer>
