--- a/movieServer/public/DataTypePages/UserData.html
+++ b/movieServer/public/DataTypePages/UserData.html
@@ -1,97 +1,59 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Insert title of page below -->
     <title>Home</title>
 
     <!-- END SHARED -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../stylesheets/UserDataStyle.css" />
     <link rel="stylesheet" href="../stylesheets/mainstlye.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="mainheading">
-        <header>
-            <h1>Box Office Database</h1>
-        </header>
+      <header>
+        <h1>Box Office Database</h1>
+      </header>
 
-        <nav class="mainlinks">
-            <div class="maincontent">
-                <ul>
-                    <li><a title="Home page" href="../index.html">Home</a></li>
-                    <li>
-                        <a title="Movie home page" href="Movies.html">Movies</a>
-                    </li>
-                    <!-- <li>Shows</li>  may or may not do shows instead or as well as the movie type-->
-                    <li>
-                        <a title="User's Data Page" href="UserData.html">User data</a>
-                    </li>
-                    <li>
-                        <a title="Actors home page" href="Actors.html">Actors</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+      <nav class="mainlinks">
+        <div class="maincontent">
+          <ul>
+            <li><a title="Home page" href="../index.html">Home</a></li>
+            <li>
+              <a title="Movie home page" href="Movies.html">Movies</a>
+            </li>
+            <!-- <li>Shows</li>  may or may not do shows instead or as well as the movie type-->
+            <li>
+              <a title="User's Data Page" href="UserData.html">User data</a>
+            </li>
+            <li>
+              <a title="Actors home page" href="Actors.html">Actors</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
+    <div class="maincontent">
+      <h2>Users</h2>
 
-    <h2>List of User Data</h2>
+      <p>
+        Welcome to the user section. From here, you can click the links below to either
+        create a new user or view an overview of all users. From the overview, you can
+        look at a particular user in greater detail.
+      </p>
 
-    <button type="button" class="btn btn-dark btn-lg" href="#">CREATE NEW USER</button>
-    <table>
-        <tr>
-            <th scope="col">Username</th>
-            <th scope="col">Password</th>
-            <th scope="col">Member since</th>
-            <th scope="col">Favorite movies</th>
-            <th scope="col">Favorite actors</th>
-        </tr>
-        <tr>
-            <td>mjmeyer2001</td>
-            <td>chemeketa1234</td>
-            <td>4/24/21</td>
-            <td>
-                <a href="Movies.html" title="Collection of the users favorite movies">Insert list here</a
-          >
-        </td>
-        <td>
-          <a href="Actors.html" title="Collection of the users favorite actors"
-            >Insert list here</a
-          >
-        </td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+      <button type="button" class="btn btn-dark btn-lg" href="#">CREATE NEW USER</button>
+
+      <a href="/DataTypePages/UserData.html/users">List of Users</a>
+    </div>
   </body>
 
   <footer style="margin-top: 5%">
