--- a/movieServer/public/index.html
+++ b/movieServer/public/index.html
@@ -28,9 +28,9 @@
           <ul>
             <li><a title="Home page" href="#">Home</a></li>
             <li>
-              <a title="Movie home page" href="DataTypePages/Movies.html">Movies</a>
+              <!-- <a title="Movie home page" href="DataTypePages/Movies.html">Movies</a> -->
+              <a title="Movie home page" href="/movies">Movies</a>
             </li>
-            <!-- <li>Shows</li>  may or may not do shows instead or as well as the movie type-->
             <li>
               <a title="User's Data Page" href="DataTypePages/UserData.html">Users</a>
             </li>
