--- a/movieServer/public/index.html
+++ b/movieServer/public/index.html
@@ -35,7 +35,7 @@
               <a title="User's Data Page" href="DataTypePages/UserData.html">Users</a>
             </li>
             <li>
-              <a title="Actors home page" href="DataTypePages/Actors.html">Actors</a>
+              <a title="Actors home page" href="/actors">Actors</a>
             </li>
           </ul>
         </div>
