--- a/movieServer/public/404.html
+++ b/movieServer/public/404.html
@@ -32,6 +32,7 @@
       <article>
         <p>Oops! I don't have that page!</p>
       </article>
+      <a style="color: #7ba800;" title="Home page" href="../index.html">Back to Home</a>
     </div>
   </body>
 
