--- a/movieServer/public/DataTypePages/UserData.html
+++ b/movieServer/public/DataTypePages/UserData.html
@@ -24,14 +24,14 @@
                 <ul>
                     <li><a title="Home page" href="../index.html">Home</a></li>
                     <li>
-                        <a title="Movie home page" href="Movies.html">Movies</a>
+                        <a title="Movie home page" href="/movies">Movies</a>
                     </li>
                     <!-- <li>Shows</li>  may or may not do shows instead or as well as the movie type-->
                     <li>
                         <a title="User's Data Page" href="UserData.html">User data</a>
                     </li>
                     <li>
-                        <a title="Actors home page" href="Actors.html">Actors</a>
+                        <a title="Actors home page" href="/actors">Actors</a>
                     </li>
                 </ul>
             </div>
