Group work starting on forms

--- a/movieServer/public/index.html
+++ b/movieServer/public/index.html
@@ -29,7 +29,7 @@
             <li><a title="Home page" href="#">Home</a></li>
             <li>
               <!-- <a title="Movie home page" href="DataTypePages/Movies.html">Movies</a> -->
-              <a title="Movie home page" href="/movies">Movies</a>
+              <a title="Movie home page" href="/movies/">Movies</a>
             </li>
             <li>
               <a title="User's Data Page" href="DataTypePages/UserData.html">Users</a>
@@ -46,6 +46,7 @@
       <header>
         <h2 class="pagetitle">Home</h2>
       </header>
+
       <article>
         <p>
           Welcome to the Box Office Database. Here you can find all the information you
