Made some default data and minor fixes

--- a/movieServer/public/404.html
+++ b/movieServer/public/404.html
@@ -13,8 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./stylesheets/mainstlye.css" />
-    <link rel="stylesheet" href="../../stylesheets/mainstlye.css" />
+    <link rel="stylesheet" href="/stylesheets/mainstlye.css" />
     <!-- END SHARED -->
   </head>
 
@@ -32,7 +31,7 @@
       <article>
         <p>Oops! I don't have that page!</p>
       </article>
-      <a style="color: #7ba800;" title="Home page" href="../index.html">Back to Home</a>
+      <a style="color: #7ba800" title="Home page" href="/">Back to Home</a>
     </div>
   </body>
 
