User CRUD working

--- a/movieServer/public/DataTypePages/UserData.html
+++ b/movieServer/public/DataTypePages/UserData.html
@@ -42,8 +42,7 @@
 
         <p>
             Welcome to the user section. From here, you can head to the
-            <a href="/DataTypePages/UserData/users">user list </a>to view an overview of all users. If you would like to see a visual representation of our user's favorite movies and actors, click <a href="/DataTypePages/UserData/graphs">here</a>. Or,
-            click the button down below to create a new user.
+            <a href="/DataTypePages/UserData/users">user list </a>to view an overview of all users. Or, click the button down below to create a new user.
         </p>
         <div class="d-grd col-3 mx-auto formButton">
             <a role="button" class="btn btn-dark btn-lg center" href="./UserData/users/create">
