--- a/movieServer/public/index.html
+++ b/movieServer/public/index.html
@@ -32,7 +32,7 @@
               <a title="Movie home page" href="/movies/">Movies</a>
             </li>
             <li>
-              <a title="User's Data Page" href="DataTypePages/UserData.html">Users</a>
+              <a title="User's Data Page" href="DataTypePages/UserData.html">User data</a>
             </li>
             <li>
               <a title="Actors home page" href="/actors">Actors</a>
@@ -51,11 +51,12 @@
         <p>
           Welcome to the Box Office Database. Here you can find all the information you
           need on movies, actors, and user data. Using the navbar you can locate all of
-          the individual pages that have specified information. This site is currently
-          under development and as such there are some functionalites that have not yet
-          been made available. However, this will have information on all of the data
-          types and tie them together more than just navagating using the navbar at the
-          top of the page.
+          the individual pages that have specified information. This site is no longer in
+          development and all functionalites are fully available. In the movies menu, you 
+          will see a list of movies and have the ability to look for genres or create your own.
+          In the users menu, you will be able to create a user or look at the available users.
+          In the actors menu, you will see a list of actors and can create your own actors and
+          link up to any movie.
         </p>
       </article>
       <img
